-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
OS X 10.10
-
-
10126b37d2e4655e17a2ea25b10801d8f9186f1c
Items in a QToolButton menu don't reliably emit triggered signal when releasing mouse button on the items. Clicking on items works fine as well the same code on Windows.
Use the attached test application to reproduce the issue.
| For Gerrit Dashboard: QTBUG-43464 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 102684,3 | Cocoa integration - popups and mouse events | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 108098,7 | Cocoa: Correct mouse event forwarding for popups | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |