tests/manual/cocoa/popups/popups.pro
@@ -1,0 +1,4 @@
+QT += widgets
+
+SOURCES = main.cpp
+CONFIG -= app_bundle
